<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:orientation="vertical" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:tools="http://schemas.android.com/tools">


    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardSetupInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    app:strokeWidth="1dp"
                    app:strokeColor="#1A000000"
                    app:cardElevation="1dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                        android:layout_margin="16dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <ImageView
                            android:id="@+id/imageAvatarSetupInfo"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="@string/user_avatar"
                            android:scaleType="centerCrop"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_outline_account_circle_24px" />

                    <TextView
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            android:id="@+id/textAvatarSetupInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_picture"/>
                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/layoutNickSetupInfo"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="16dp">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/nick"
                                android:maxLength="12" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <LinearLayout
                            android:layout_margin="8dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >


                        <TextView
                                android:id="@+id/textGenderSetupInfo"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="8dp"
                                android:gravity="center_vertical"
                                android:text="@string/gender"
                                android:textSize="18sp" />

                        <com.google.android.material.chip.ChipGroup
                                android:id="@+id/chipGroupGenderTypeSetupInfo"
                                style="@style/Widget.MaterialComponents.ChipGroup"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                app:checkedChip="@id/chipMaleSetupInfo"
                                app:singleSelection="true">

                            <com.google.android.material.chip.Chip
                                    android:id="@+id/chipMaleSetupInfo"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:checkable="true"
                                    android:text="男"
                                    android:textAlignment="center"
                                    app:checkedIconVisible="false" />

                            <com.google.android.material.chip.Chip
                                    android:id="@+id/chipFemaleSetupInfo"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:checkable="true"
                                    android:text="女"
                                    android:textAlignment="center"
                                    app:checkedIconVisible="false" />
                        </com.google.android.material.chip.ChipGroup>
                    </LinearLayout>
                    <TextView
                            android:id="@+id/selectBirth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/layoutAddressSetupInfo"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:gravity="top"
                                android:hint="@string/signature"
                                android:inputType="text"
                                android:minHeight="100dp"
                                tools:targetApi="O" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/layoutPhoneSetupInfo"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="11"
                                android:hint="@string/phoneNumber"
                                android:inputType="phone" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/buttonSubmitSetupInfo"
                            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ok"
                            android:layout_gravity="end"
                            app:cornerRadius="18dp" />


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>